# rust-aws-sam-practice

./: .gitignore  README.md
apigateway/: Cargo.toml  template.yml
apigateway/src/: main.rs
cognito/: Cargo.toml  template.yml
cognito/src/: main.rs
dynamodb/: Cargo.toml  template.yml
dynamodb/src/: main.rs
minimal/: Cargo.toml  template.yml
minimal/src/: main.rs
s3/: Cargo.toml  template.yml
s3/src/: main.rs
sample_choices_question_api/: Cargo.toml  template.yml
sample_choices_question_api/src/: main.rs
sample_image_board/: README.md  template.yml
sample_image_board/api/: Cargo.toml
sample_image_board/api/src/: main.rs
sample_image_board/front/: Cargo.toml
sample_image_board/front/src/: main.rs
sample_image_converter/: README.md  buildspec.yml  template.yml
sample_image_converter/api_check/: Cargo.toml
sample_image_converter/api_check/src/: main.rs
sample_image_converter/api_init/: Cargo.toml
sample_image_converter/api_init/src/: main.rs
sample_image_converter/front/: Cargo.toml
sample_image_converter/front/src/: main.rs
sample_image_converter/step/: Cargo.toml  statemachine.json
sample_image_converter/step/src/: main.rs
sample_json_response/: Cargo.toml  template.yml
sample_json_response/src/: main.rs
sample_logging/: Cargo.toml  template.yml
sample_logging/src/: main.rs
sample_page/: README.md  template.yml
sample_page/front/: Cargo.toml
sample_page/front/src/: main.rs
serverlessapplicationrepository/: Cargo.toml  template.yml
serverlessapplicationrepository/src/: main.rs
sns/: Cargo.toml  template.yml
sns/src/: main.rs
stepfunction/: Cargo.toml  template.yml
stepfunction/src/: main.rs
