[package]
name = "sample_logging"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.7", features = ["apigw"] }
http = "0.2"
lambda_runtime = "0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
