[package]
name = "sample_image_board_api"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
base64 = "0.21.5"
chrono = "0.4.19"
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-sdk-dynamodb = "1.9.0"
