[package]
name = "sample_image_converter_api_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
base64 = "0.21.5"
chrono = "0.4.19"
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-sdk-sfn = "1.9.0"
