[package]
name = "sample_image_converter_step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.46.0"
aws-sdk-s3 = "0.16.0"
aws-sdk-sfn = "0.16.0"
bytes = "1.2.0"
image = "0.24.3"
image-convert = "0.12.0"
lambda_http = "0.6.0"
lambda_runtime = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
