[package]
name = "sample_image_converter_step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-sdk-sfn = "1.9.0"
bytes = "1.2.0"
image = "0.24.3"
image-convert = "0.16.1"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
